...
                android:paddingStart="10dp"
                android:paddingRight="15dp"
                android:paddingEnd="15dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.ButtonBar"
                android:id="@+id/deleteUsageButton"
                android:src="@android:drawable/ic_menu_delete"
                />

            <ImageButton
                android:layout_margin="0dp"
                android:paddingLeft="15dp"
...
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:background="?attr/selectableItemBackground"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.ButtonBar"
                android:id="@+id/saveUsageButton"

                android:src="@android:drawable/ic_menu_save"
                />


        </LinearLayout>
...
